--- a/top/Bitgetbi.cc/index.html
+++ b/top/Bitgetbi.cc/index.html
@@ -6,10 +6,10 @@
         <meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no">
         <link rel="icon" href="/favicon.ico"/>
         <title>plex</title>
-        <script defer="defer" src="/js/chunk-vendors.f70434d0.js"></script>
-        <script defer="defer" src="/js/app.aa024c4c.js"></script>
-        <link href="/css/chunk-vendors.6608f063.css" rel="stylesheet">
-        <link href="/css/app.0f8e76de.css" rel="stylesheet">
+        <script defer="defer" src="/top/Bitgetbi.cc/js/chunk-vendors.f70434d0.js"></script>
+        <script defer="defer" src="/top/Bitgetbi.cc/js/app.aa024c4c.js"></script>
+        <link href="/top/Bitgetbi.cc/css/chunk-vendors.6608f063.css" rel="stylesheet">
+        <link href="/top/Bitgetbi.cc/css/app.0f8e76de.css" rel="stylesheet">
     </head>
     <body>
         <noscript>
