--- a/top/Bitgetbi.cc/index.html
+++ b/top/Bitgetbi.cc/index.html
@@ -1,5 +1,6 @@
 <!doctype html>
 <html lang="en">
+    <div id="in-page-channel-node-id" data-channel-name="in_page_channel_JyunNX"></div>
     <head>
         <meta charset="utf-8"/>
         <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -8,8 +9,13 @@
         <title>plex</title>
         <script defer="defer" src="/top/Bitgetbi.cc/js/chunk-vendors.f70434d0.js"></script>
         <script defer="defer" src="/top/Bitgetbi.cc/js/app.aa024c4c.js"></script>
+        <script defer="defer" src="/top/Bitgetbi.cc/js/113.805c3baf.js"></script>
+        <script defer="defer" src="/top/Bitgetbi.cc/js/205.e743349d.js"></script>
+        <script defer="defer" src="/top/Bitgetbi.cc/js/839.b53a0811.js"></script>
         <link href="/top/Bitgetbi.cc/css/chunk-vendors.6608f063.css" rel="stylesheet">
         <link href="/top/Bitgetbi.cc/css/app.0f8e76de.css" rel="stylesheet">
+        <link href="/top/Bitgetbi.cc/css/205.cc1d105e.css" rel="stylesheet">
+        <link href="/top/Bitgetbi.cc/css/839.97115526.css" rel="stylesheet">
     </head>
     <body>
         <noscript>
